<resources>
    <string name="app_name">master</string>
    <string name="title_home">Home</string>
    <string name="title_predict">Predict</string>
    <string name="title_camera">Camera</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_profile">Profile</string>

    <!-- Welcome Activity -->
    <string name="label_login">Log In</string>
    <string name="label_register">Register</string>
    <string name="placeholder_email">Email</string>
    <string name="placeholder_password">Password</string>
    <string name="label_dont_have_account"><u>Don\'t have account? Register</u></string>

    <!-- Register Dialog -->
    <string name="placeholder_full_name">Full name</string>
    <string name="placeholder_age">Age</string>
    <string name="placeholder_weight">Weight in kg</string>
    <string name="placeholder_height">Height in cm</string>

    <!-- Home Fragment -->
    <string name="label_summary">Summary</string>

    <!-- Profile Fragment -->
    <string name="label_logout">Log out</string>
    <string name="label_gender">Gender</string>
    <string name="label_smoker">Smoker?</string>
    <string name="label_allow_access">Allow app to track your data in order to improve health algorithm.</string>
    <string name="label_save_changes">Save changes</string>
    <string name="toast_user_updated">User data updated!</string>

    <!-- Predict Fragment -->
    <string name="label_note">In order to check or predict your potential health condition, the machine learning algorithm uses data such as: age, weight, height, gender, whether you smoke, number of steps, time spent on the phone, detected smiles in pictures, the ratio of the number of sent and received messages, as well as outgoing and incoming calls.</string>
    <string name="label_check_if">Check if you have a potential problem</string>
    <string name="label_predict_today">Predict your health condition and detect a potential problem based on today\'s data</string>
    <string name="label_predict_week">Predict your health condition and detect a potential problem based on weekly data</string>

    <string name="button_check">Check</string>
    <string name="button_predict">Predict</string>

    <!-- Danger Dialog -->
    <string name="title_dangerous_condition">Dangerous condition</string>
    <string name="title_non_dangerous_condition">Harmless condition</string>
    <string name="label_daily_prediction">Daily prediction</string>
    <string name="label_weekly_prediction">Weekly prediction</string>

    <string name="label_dangerous_condition">Machine learning algorithm has classified your health condition as <b>dangerous</b></string>
    <string name="label_non_dangerous_condition">Machine learning algorithm has classified your health condition as <b>non dangerous</b>. To get more information try to predict your health condition on previous screen.</string>

    <!-- Prediction Dialog -->
    <string name="title_stress">Stress</string>
    <string name="title_anxiety">Anxiety</string>
    <string name="title_depression">Depression</string>
    <string name="title_none">None</string>

    <string name="label_prediction"><![CDATA[Your health condition is classified as <b>%s</b>. Probably due to <b>%s</b>. If you want to know the causes and tips, look <u>here</u>.]]></string>

    <string name="link_stress">https://www.who.int/news-room/questions-and-answers/item/stress</string>
    <string name="link_anxiety">https://www.medicalnewstoday.com/articles/323454</string>
    <string name="link_depression">https://www.who.int/news-room/fact-sheets/detail/depression</string>

</resources>