<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.master.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_predict"
        android:name="com.example.master.ui.predict.PredictFragment"
        android:label="@string/title_predict"
        tools:layout="@layout/fragment_predict" />

    <fragment
        android:id="@+id/navigation_camera"
        android:name="com.example.master.ui.camera.CameraFragment"
        android:label="@string/title_camera"
        tools:layout="@layout/fragment_camera" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.example.master.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.master.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />

</navigation>